# celeste_server

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BUILD_DB.sql  CMakeLists.txt  README.md  SRV_DOXYFILE  config.json  index.html  logger-conf.conf
client/: CMakeLists.txt  main.cpp  sunspec
cmake/: configuration.cmake
cmake/modules/: Findceleste_rn.cmake  Findjson.cmake  Findmysql.cmake  Findmysqlcppconn.cmake  Findobject_pool.cmake  Findrestbed.cmake  Findsoci.cmake
db/: create_db.sql  model.mwb  model.mwb.bak
doc/: API.md  DB.md
doc/api/: API.md
doc/server/: default_font.sty
doc/server/html/: _device_data_8hpp.html  _device_data_8hpp_source.html  _float_translator_8hpp.html  _float_translator_8hpp_source.html  _integer_translator_8hpp.html  _integer_translator_8hpp_source.html  _model_data_8hpp.html  _model_data_8hpp_source.html  _point_data_8hpp.html  _point_data_8hpp_source.html  _sun_spec_data_8hpp.html  _sun_spec_data_8hpp_source.html  annotated.html  classes.html  classsunspec_1_1data_1_1_error.html  classsunspec_1_1data_1_1_model_data_error-members.html  classsunspec_1_1data_1_1_model_data_error.html  classsunspec_1_1data_1_1_point_data_error-members.html  classsunspec_1_1data_1_1_point_data_error.html  classsunspec_1_1data_1_1_x_m_l_error-members.html  classsunspec_1_1data_1_1_x_m_l_error.html  data_8hpp_source.html  dir_18240acdc2d96e78ec8a1fc3e49ffd46.html  dir_5376e4eda799b555d4339e9eaadd5b47.html  dir_74793cf172c9df3fdb3c6ef290a95353.html  dir_821a0650bc8512fd1fd66c858b588ec3.html  dir_9fda64d5e36ac579f39631f5e04390c8.html  dir_a8bc07c8bca763e7ad33685adf24de82.html  dir_f80a49b1bab3506dd1d794227545fe46.html  error_8hpp_source.html  files.html  functions.html  index.html  (+23 more)
docs/: API.md  DB.md  SERVER_INTALLATION.md
doxy/: mainpage.dox
server/: CMakeLists.txt  SRV_DOXYFILE.bak  main.cpp
server/doxy/: mainpage.dox
server/srv/: util.cpp  util.hpp
server/srv/db/: db.cpp  db.hpp
server/srv/resource/: logger_upload.cpp  logger_upload.hpp  resource.hpp
server/srv/resource/logger_upload/: logger_upload.cpp  logger_upload.hpp
server/srv/resource/query/: query.cpp  query.hpp
server/srv/resource/query/methods/: getLastReading.cpp  getLastReading.hpp  methods.hpp
server/srv/service/: common.cpp  common.hpp  error.cpp  error.hpp  services.hpp  status.hpp
server/srv/service/DeviceModel/: DeviceModel.cpp  DeviceModel.hpp
server/srv/service/DeviceStatus/: DeviceStatus.cpp  DeviceStatus.hpp
server/srv/service/device/: device.cpp  device.hpp
server/srv/service/logger_upload/: LoggerUpload.cpp  LoggerUpload.hpp  logger_upload.cpp  logger_upload.hpp
server/srv/service/model/: model.cpp  model.hpp
server/srv/service/point/: point.cpp  point.hpp
server/srv/service/readings/: LastReading.cpp  RangeReading.cpp  ReadRequest.hpp  Reading.hpp  ReadingDispatcher.cpp  ReadingDispatcher.hpp  ReadingFetcher.cpp  ReadingFetcher.hpp  getLastReading.cpp  getLastReading.hpp  reading.cpp  reading.hpp  readings.hpp  sql_script_reading
server/sunspec/: sunspec.hpp
server/sunspec/data/: PointData.cpp  SunSpecData.cpp  SunSpecDataResponse.cpp
server/sunspec/util/: sdx_tags.hpp  util.hpp
server/sunspec/verifier/: verify.cpp  verify.hpp
server/test/: CMakeLists.txt
server/tests/: CMakeLists.txt
server/tests/src/: db_connection.cpp  example.cpp
soci/: soci-config.h
source/client/: CMakeLists.txt  main.cpp
source/cmake/: FindRestbed.cmake
source/python/: from_data.py  pro.xml  smdx_to_model.py  test_data.py  test_obj.xml
source/server/: CMakeLists.txt  SRV_DOXYFILE  main.cpp  server.sublime-project  server.sublime-workspace
source/server/db/: cppsqlconn_docs.txt  db.hpp  db_exceptions.hpp  exceptions.hpp  util.cpp  util.hpp
source/server/db/dao/: ClientDAO.cpp  ClientDAO.hpp  DeviceDAO.cpp  DeviceDAO.hpp  DeviceRecordDAO.cpp  DeviceRecordDAO.hpp  GenericDAO.hpp  ModelDAO.cpp  ModelDAO.hpp  ModelRecordDAO.cpp  ModelRecordDAO.hpp  PointDAO.cpp  PointDAO.hpp  PointRecordDAO.cpp  PointRecordDAO.hpp  dao.hpp
source/server/db/entity/: AbstractEntity.hpp  Client.hpp  Device.hpp  DeviceRecord.hpp  Inventory.hpp  Model.hpp  ModelRecord.hpp  Point.hpp  PointRecord.hpp  entity.hpp
source/server/doxy/: mainpage.dox
source/server/srv/: status_code.hpp  status_codes.hpp
source/server/srv/db/dao/: ClientDAO.cpp  ClientDAO.hpp
source/server/srv/entity/: Client.hpp
source/server/srv/resource/: logger_upload.cpp  logger_upload.hpp  resource.hpp
source/server/srv/resources/: resource.cpp  resource.hpp
source/server/srv/services/: service.cpp  service.hpp
source/server/sunspec/: sunspec.hpp
source/server/sunspec/data/: DataPoint.cpp  DataPoint.hpp  DeviceData.cpp  DeviceData.hpp  DeviceResult.cpp  DeviceResult.hpp  ModelData.cpp  ModelData.hpp  PointData.cpp  PointData.hpp  SunSpecData.cpp  SunSpecData.hpp  SunSpecDataResponse.cpp  SunSpecDataResponse.hpp  data.hpp  error.hpp  util.hpp  util_implementation.hpp
source/server/sunspec/data/element/: DataPoint.hpp  DeviceData.cpp  DeviceData.hpp  ModelData.cpp  ModelData.hpp  PointData.cpp  PointData.hpp  SunSpecData.cpp  SunSpecData.hpp
source/server/sunspec/data/response/: DeviceFailure.cpp  DeviceFailure.hpp  DeviceResult.cpp  DeviceResult.hpp  SunSpecDataResponse.cpp  SunSpecDataResponse.hpp
source/server/sunspec/data/translator/: FloatTranslator.hpp  IntegerTranslator.hpp
source/server/sunspec/data/util/: error.hpp  sdx_tags.hpp  util.hpp  util_implementation.hpp
source/server/sunspec/model/: CommonModel.hpp  GPSReading.hpp  OpenEnergyMonitor.cpp  OpenEnergyMonitor.hpp  Thermometer.cpp  Thermometer.hpp
source/server/sunspec/point/: Altitude.hpp
source/server/sunspec/translator/: FloatTranslator.hpp  IntegerTranslator.hpp
source/server/sunspec/util/: Error.hpp  SDX_Tags.hpp  data_exceptions.hpp  exceptions.hpp  status_code.hpp  util.hpp
source/server/sunspec/verifier/: verify.cpp  verify.hpp
source/server/test/: tests.cpp  tests.hpp
src/: main.cpp
src/srv/: CelesteServer.cpp  CelesteServer.hpp  error.hpp
sunspec/: SunSpecInformationModelReference (1).xlsx
(+556 files in other folders)
